tests/rosetta/transpiler/Scala/constrained-random-points-on-a-circle-2.error
exit status 1
/workspace/mochi/tests/rosetta/transpiler/Scala/constrained-random-points-on-a-circle-2.scala:50: error: overloaded method value >= with alternatives:
  (x: Double)Boolean <and>
  (x: Float)Boolean <and>
  (x: Long)Boolean <and>
  (x: Int)Boolean <and>
  (x: Char)Boolean <and>
  (x: Short)Boolean <and>
  (x: Byte)Boolean
 cannot be applied to (scala.math.BigInt)
        if ((r2 >= min2 && r2 <= max2).asInstanceOf[Boolean]) {
                ^
/workspace/mochi/tests/rosetta/transpiler/Scala/constrained-random-points-on-a-circle-2.scala:50: error: overloaded method value <= with alternatives:
  (x: Double)Boolean <and>
  (x: Float)Boolean <and>
  (x: Long)Boolean <and>
  (x: Int)Boolean <and>
  (x: Char)Boolean <and>
  (x: Short)Boolean <and>
  (x: Byte)Boolean
 cannot be applied to (scala.math.BigInt)
        if ((r2 >= min2 && r2 <= max2).asInstanceOf[Boolean]) {
                              ^
two errors found
