tests/rosetta/transpiler/Scala/constrained-random-points-on-a-circle-2.scala
// Generated by Mochi v0.10.42 on 2025-07-27 17:27:31 GMT+7
import scala.collection.mutable.{ArrayBuffer, Map}
import scala.math.BigInt
import scala.collection.immutable.ListMap
object Main {
  private var _nowSeed: Long = 0L
  private var _nowSeeded: Boolean = false
  private def _now(): Int = {
    if (!_nowSeeded) {
      sys.env.get("MOCHI_NOW_SEED").foreach { s =>
      try { _nowSeed = s.toInt; _nowSeeded = true } catch { case _ : NumberFormatException => () }
    }
  }
  if (_nowSeeded) {
    _nowSeed = (_nowSeed * 1664525 + 1013904223) % 2147483647
    _nowSeed.toInt
  } else {
    Math.abs((System.nanoTime() / 1000).toInt)
  }
}

def toJson(value: Any, indent: Int = 0): String = value match {
  case m: scala.collection.Map[_, _] =>
  val items = ListMap(m.toSeq.sortBy(_._1.toString): _*).toSeq.map{ case (k,v) => "  "*(indent+1)+"\""+k.toString+"\": "+toJson(v, indent+1) }
  "{\n"+items.mkString(",\n")+"\n"+"  "*indent+"}"
  case s: Seq[_] =>
  val items = s.map(x => "  "*(indent+1)+toJson(x, indent+1))
  "[\n"+items.mkString(",\n")+"\n"+"  "*indent+"]"
  case s: String => "\""+s+"\""
  case other => other.toString
}

def main(args: Array[String]): Unit = {
  {
    System.gc()
    val _startMem = Runtime.getRuntime.totalMemory() - Runtime.getRuntime.freeMemory()
    val _start = _now()
    val nPts: BigInt = BigInt(100)
    val rMin: BigInt = BigInt(10)
    val rMax: BigInt = BigInt(15)
    val span = rMax + BigInt(1) + rMax
    var poss: ArrayBuffer[ArrayBuffer[BigInt]] = ArrayBuffer()
    val min2 = rMin * rMin
    val max2 = rMax * rMax
    var y = BigInt(0) - rMax
    while (y <= rMax) {
      var x = BigInt(0) - rMax
      while (x <= rMax) {
        val r2: Double = (x * x).toString.toDouble + (y * y).toString.toDouble
        if ((r2 >= min2 && r2 <= max2).asInstanceOf[Boolean]) {
          poss = poss :+ (ArrayBuffer(x, y)).asInstanceOf[ArrayBuffer[BigInt]]
        }
        x = (x + BigInt(1)).asInstanceOf[BigInt]
      }
      y = (y + BigInt(1)).asInstanceOf[BigInt]
    }
    println(String.valueOf((poss).size) + " possible points")
    var rows: ArrayBuffer[ArrayBuffer[String]] = ArrayBuffer()
    var r: BigInt = BigInt(0)
    while (r < span) {
      var row: ArrayBuffer[String] = ArrayBuffer()
      var c: BigInt = BigInt(0)
      while (c < span * BigInt(2)) {
        row = row :+ " "
        c = (c + BigInt(1)).asInstanceOf[BigInt]
      }
      rows = rows :+ row
      r = (r + BigInt(1)).asInstanceOf[BigInt]
    }
    var u: BigInt = BigInt(0)
    var seen: scala.collection.mutable.Map[String,Boolean] = scala.collection.mutable.Map()
    var n: BigInt = BigInt(0)
    while (n < nPts) {
      var i = Math.floorMod(_now(), (poss).size)
      val x: BigInt = poss((i).toInt)((BigInt(0)).toInt)
      val yy: BigInt = poss((i).toInt)((BigInt(1)).toInt)
      val row = yy + rMax
      val col = (x + rMax) * BigInt(2)
      rows((row).toInt)((col).toInt) = "*"
      val key: String = String.valueOf(row) + "," + String.valueOf(col)
      if ((!seen.getOrElse(key, null.asInstanceOf[Boolean])).asInstanceOf[Boolean]) {
        seen.update(key, true)
        u = (u + BigInt(1)).asInstanceOf[BigInt]
      }
      n = (n + BigInt(1)).asInstanceOf[BigInt]
    }
    var i2: BigInt = BigInt(0)
    while (i2 < span) {
      var line: String = ""
      var j: BigInt = BigInt(0)
      while (j < span * BigInt(2)) {
        line = (line + rows((i2).toInt)((j).toInt)).toString
        j = (j + BigInt(1)).asInstanceOf[BigInt]
      }
      println(line)
      i2 = (i2 + BigInt(1)).asInstanceOf[BigInt]
    }
    println(String.valueOf(u) + " unique points")
    val _end = _now()
    System.gc()
    val _endMem = Runtime.getRuntime.totalMemory() - Runtime.getRuntime.freeMemory()
    val _durUs = (_end - _start) / 1000
    var _memDiff = _endMem - _startMem
    if (_memDiff <= 0) _memDiff = _endMem
    println(toJson(scala.collection.immutable.Map("duration_us" -> _durUs, "memory_bytes" -> _memDiff, "name" -> "main")))
  }
}
}
